--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "library",
   "private": true,
+  "engines": {
+    "node": "7.8.0",
+    "npm": "4.4.4",
+    "yarn": "0.22.0"
+  },
   "dependencies": {},
   "cacheDirectories": [
     "node_modules",
