--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "client/node_modules"
   ],
   "scripts": {
+    "postinstall": "cd client && yarn install",
+
     "postinstall": "cd client && npm install"
   }
 }
