--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "yarn": "0.22.0"
   },
   "dependencies": {
+    "immutability-helper": "^2.3.1",
     "lodash": "^4.17.4"
   },
   "cacheDirectories": [
@@ -14,8 +15,6 @@
     "client/node_modules"
   ],
   "scripts": {
-    "postinstall": "cd client && yarn install",
-
     "postinstall": "cd client && npm install"
   }
 }
